# hivedb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  buildpack.yml  deploy_to_render.sh  deployment_check.sh  docker-compose.yml  render.yaml  zip_for_render.sh
.github/workflows/: ci-cd.yml
dart_client/hivedb_flutter/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
dart_client/hivedb_flutter/.dart_tool/: package_config.json  package_config_subset
dart_client/hivedb_flutter/lib/: hivedb_flutter.dart
docs/: installation.md  monitoring.md  quickstart.md  user-guide.md
examples/: README.md  advanced-usage.md
examples/personal_diary/: README.md  main.py
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
python_client/: README.md  setup.py
python_client/hivedb/: __init__.py  client.py  utils.py
server/: .env  Dockerfile  api_documentation.md  main.py  main_new.py  requirements.txt
server/cells/: cell1907846350.db  cell2267237804.db  cell2334997108.db  cell2420672328.db  cell2987236159.db  cell3239412036.db  cell3385813923.db  cell8502363670.db
server/services/: database.py  hexagonal_query_engine.py
server/services/analytics/: analytics_engine.py
server/services/auth/: auth.py  models.py
server/services/database/: __init__.py  models.py
server/services/kafka/: __init__.py  consumer.py  producer.py
server/services/sgx/: __init__.py  (+1 more)
server/tests/: __init__.py  conftest.py  test_auth.py  test_cells.py  test_data.py
src/: lib.rs  main.rs
src/core/: cell.rs  error.rs  hive.rs  mod.rs  query.rs  schema.rs
web_interface/: Dockerfile  config-overrides.js  nginx.conf  package-lock.json  package.json
web_interface/public/: index.html
web_interface/src/: App.js  index.css  index.js
web_interface/افكار ملهمة للمشروع/: الهام.md
(+38 files in other folders)
