[package]
name = "hivedb"
version = "0.1.0"
edition = "2021"
description = "A revolutionary database system inspired by beehives"
authors = ["HiveDB Team"]
license = "MIT"

[dependencies]
# Core functionality
rayon = "1.7.0"           # Parallel computing
serde = { version = "1.0.163", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0.96"     # JSON support
thiserror = "1.0.40"      # Error handling
log = "0.4.17"            # Logging
env_logger = "0.10.0"     # Logging implementation
tokio = { version = "1.28.2", features = ["full"] } # Async runtime

# Storage and data structures
hexagonal = "0.1.1"       # Hexagonal grid data structure
lz4 = "1.24.0"            # Compression
hexgrid = "0.3.0"         # Hexagonal grid implementation
rocksdb = "0.20.1"        # Storage engine

# Security
ring = "0.16.20"          # Cryptography
aes-gcm = "0.10.1"        # AES encryption
argon2 = "0.5.0"          # Password hashing
rand = "0.8.5"            # Random number generation

# Distributed systems
rdkafka = { version = "0.29.0", features = ["cmake-build"] } # Kafka client
tonic = "0.9.2"           # gRPC implementation
prost = "0.11.9"          # Protocol Buffers

# WebAssembly support
wasm-bindgen = "0.2.86"   # WASM bindings
js-sys = "0.3.63"         # JavaScript interop
web-sys = { version = "0.3.63", features = ["console"] } # Web APIs

[dev-dependencies]
criterion = "0.5.1"       # Benchmarking
mockall = "0.11.4"        # Mocking for tests
test-case = "3.1.0"       # Test utilities

[features]
default = ["standard"]
standard = []
wasm = ["wasm-bindgen"]
sgx = []

[lib]
name = "hivedb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hivedb"
path = "src/main.rs"
